--- a/css/owl.carousel.css
+++ b/css/owl.carousel.css
@@ -142,7 +142,7 @@
   top: 50%;
   margin-left: -40px;
   margin-top: -40px;
-  background: url("owl.video.play.png") no-repeat;
+  background: url("http://lmpixels.com/demo/sunshine/sunshine-version-1/sunshine-v1-html-template-orange/css/owl.video.play.png") no-repeat;
   cursor: pointer;
   z-index: 1;
   -webkit-backface-visibility: hidden;
